# OpenCVApplication

./: local.properties
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/dengjiaming/opencvapplication/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: DetectionBasedTracker.cpp  DetectionBasedTracker.h
app/src/main/java/com/example/dengjiaming/opencvapplication/: MainActivity.java  OpenCVActivity.java
app/src/main/java/com/example/dengjiaming/opencvapplication/util/: DetectionBasedTracker.java  FaceUtil.java
app/src/main/res/layout/: activity_main.xml  activity_opencv.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/dengjiaming/opencvapplication/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
openCVLibrary330/: build.gradle
openCVLibrary330/src/main/java/org/opencv/android/: CameraBridgeViewBase.java  JavaCameraView.java
openCVLibrary330/src/main/java/org/opencv/core/: Core.java  MatOfRect.java
openCVLibrary330/src/main/java/org/opencv/imgcodecs/: Imgcodecs.java
openCVLibrary330/src/main/java/org/opencv/objdetect/: CascadeClassifier.java
